<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tbDetailsToolbar"
        layout="@layout/toolbar" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivDetailsProfileImage"
        android:layout_width="@dimen/DetailsProfileImageSize"
        android:layout_height="@dimen/DetailsProfileImageSize"
        android:layout_below="@id/tbDetailsToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/ImageBorderColor"
        app:civ_border_width="2dp" />

    <ProgressBar
        android:id="@+id/pbDetailsLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/ivDetailsProfileImage"
        android:layout_alignEnd="@id/ivDetailsProfileImage"
        android:layout_alignTop="@id/ivDetailsProfileImage"
        android:layout_alignBottom="@id/ivDetailsProfileImage"
        android:elevation="6dp"
        android:visibility="visible"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivDetailsProfileImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:isScrollContainer="true"

            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llDetailsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="8dp"
                    android:text="@string/details_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetailsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:padding="8dp"
                    android:text="Value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDetailsLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="8dp"
                    android:text="@string/details_surname" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetailsLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:padding="8dp"
                    android:text="Value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDetailsScreenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="8dp"
                    android:text="@string/details_screenname" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetailsScreenName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:padding="8dp"
                    android:text="Value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDetailsSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="8dp"
                    android:text="@string/details_sex" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetailsSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:padding="8dp"
                    android:text="Value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDetailsFamilyRelation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:padding="8dp"
                    android:text="@string/details_family_relation" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetailsFamilyRelation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:padding="8dp"
                    android:text="Value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDetailsFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/btn_text_friends"
                />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>